--- a/.github/workflows/rust-code-general.yml
+++ b/.github/workflows/rust-code-general.yml
@@ -74,6 +74,12 @@ jobs:
           username: framtale
           password: ${{ inputs.ghcr_password }}
 
+      - uses: actions-rs/toolchain@v1
+        with:
+            toolchain: nightly
+            components: clippy
+            override: true
+
       - name: Clippy check
         uses: actions-rs/clippy-check@v1
         with:
