--- a/.github/workflows/rust-code-general.yml
+++ b/.github/workflows/rust-code-general.yml
@@ -79,13 +79,13 @@ jobs:
             toolchain: nightly
             components: clippy
             override: true
-
-      - name: Clippy check
-        uses: actions-rs/clippy-check@v1
+            
+      - name: Clippy Check
+        uses: actions-rs/cargo@v1
         with:
-         token:  ${{ secrets.GITHUB_TOKEN }}
-         use-cross: true
-         args: --target ${{ inputs.target }}
+          use-cross: true
+          command: clippy
+          args: --target ${{ inputs.target }}
 
   test:
     name: Test Rust code base
