--- a/.github/workflows/rust-code-general.yml
+++ b/.github/workflows/rust-code-general.yml
@@ -10,6 +10,9 @@ on:
       system_packages:
         required: false
         type: string
+      target:
+        required: true
+        type: string
       build_and_upload:
         required: false
         type: boolean
@@ -57,10 +60,29 @@ jobs:
         uses: github/super-linter@v4
         env:
           VALIDATE_ALL_CODEBASE: false
-          VALIDATE_RUST_CLIPPY: true
           VALIDATE_DOCKERFILE_HADOLINT: true
           DEFAULT_BRANCH: ${{ env.GITHUB_REF_NAME }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: actions-rs/toolchain@v1
+        with:
+            toolchain: nightly
+            components: clippy
+            override: true
+            
+      - name: Clippy Check
+        uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: clippy
+          args: --target ${{ inputs.target }}
 
   test:
     name: Test Rust code base
@@ -86,15 +108,26 @@ jobs:
           toolchain: ${{ inputs.toolchain_version }}
           override: true
 
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build
         uses: actions-rs/cargo@v1
         with:
+          use-cross: true
           command: build
+          args: --target ${{ inputs.target }}
 
       - name: Test
         uses: actions-rs/cargo@v1
         with:
+          use-cross: true
           command: test
+          args: --target ${{ inputs.target }}
 
   build_and_upload:
     name: Build Rust binaries and upload artifact
@@ -113,6 +146,14 @@ jobs:
       run: |
         sudo apt-get update && sudo apt-get upgrade -y
         sudo apt-get install ${{ inputs.system_packages }} -y
+
+    - name: Log in to the Container registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
 
     - name: Build for cross-targets
       uses: actions-rs/cargo@v1
