--- a/.github/workflows/terraform_quality.yaml
+++ b/.github/workflows/terraform_quality.yaml
@@ -42,5 +42,7 @@ jobs:
 
       - name: Check for Linting Errors
         run: |
+          ls
+          ls .github/linters
           tflint --init
           tflint -c ${{ inputs.tflint_config_path }} --recursive
