--- a/.github/workflows/terraform_quality.yaml
+++ b/.github/workflows/terraform_quality.yaml
@@ -13,7 +13,7 @@ on:
       tflint_config_path:
         required: false
         type: string
-        default: ".github/linters/.tflint.hcl"
+        default: ".tflint.hcl"
 
 permissions:
   contents: read            # git permissions to repo pull/push
@@ -42,7 +42,5 @@ jobs:
 
       - name: Check for Linting Errors
         run: |
-          ls -la .github/linters
-          cat .github/linters/.tflint.hcl
           tflint --init
           tflint -c ${{ inputs.tflint_config_path }} --recursive
