--- a/.github/workflows/rust-code-general.yml
+++ b/.github/workflows/rust-code-general.yml
@@ -22,129 +22,10 @@ on:
         type: string
       
 jobs:
-
-  format:
-    name: Format Rust code base
-    runs-on: ubuntu-latest
-
-    steps:
-
-      - name: Checkout Code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: ${{ inputs.toolchain_version }}
-          override: true
-          components: rustfmt
-
-      - name: Run rustfmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check --verbose
-
-  lint:
-    name: Lint Rust Code base
-    runs-on: ubuntu-latest
-
-    steps:
-
-      - name: Checkout Code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Lint Rust code base
-        uses: github/super-linter@v4
-        env:
-          VALIDATE_ALL_CODEBASE: false
-          VALIDATE_DOCKERFILE_HADOLINT: true
-          DEFAULT_BRANCH: ${{ env.GITHUB_REF_NAME }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Docker Pull Base Image
-        run: |
-          docker pull ${{ inputs.build_base_image }}
-
-      - uses: actions-rs/toolchain@v1
-        with:
-            toolchain: nightly
-            components: clippy
-            override: true
-            
-      - name: Clippy Check
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: clippy
-          args: --target ${{ inputs.target }}
-
-  test:
-    name: Test Rust code base
-    runs-on: ubuntu-latest
-
-    steps:
-
-      - name: Checkout Code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-  
-      - name: Install required system packages
-        if: ${{ inputs.system_packages }} != ""
-        run: |
-          sudo apt-get update && sudo apt-get upgrade -y
-          sudo apt-get install ${{ inputs.system_packages }} -y
-          
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: ${{ inputs.toolchain_version }}
-          override: true
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Docker Pull Base Image
-        run: |
-          docker pull ${{ inputs.build_base_image }}
-
-      - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --target ${{ inputs.target }}
-
-      - name: Test
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: test
-          args: --target ${{ inputs.target }}
-
   build_and_upload:
     name: Build Rust binaries and upload artifact
     if: ${{ inputs.build_and_upload }} == true
-    needs: [ format, lint, test ]
-    runs-on: ubuntu-22.04
+    runs-on: temp
     steps:
     - uses: actions/checkout@v3
 
