--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -1,7 +1,8 @@
 name: Golang Code Quality
 
 on:
-  workflow_call:
+  pull_request:
+    types: [opened, reopened]
 
 permissions:
   contents: write
