--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Install required packages
         run: |
+          sudo apt-get upgrade && sudo apt-get update -y
           sudo apt-get install -y make gcc pkg-config \
             gstreamer1.0-tools \
             gstreamer1.0-plugins-good \ 
