--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -24,7 +24,7 @@ jobs:
           
       - name: Install required package
         run: |
-          apt-get install -y \
+          sudo apt-get install -y \
             gstreamer1.0-tools \
             gstreamer1.0-plugins-good \ 
             gstreamer1.0-plugins-ugly \
