--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -20,6 +20,9 @@ jobs:
       - name: Install required packages
         run: |
           sudo add-apt-repository universe
+
+      - name: Install required packages
+        run: |
           sudo apt-get upgrade && sudo apt-get update -y
           sudo apt-get install -y make gcc pkg-config
           
