--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Install required packages
         run: |
-          sudo add-apt-repository universe
+          sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) main universe restricted multiverse"
 
       - name: Install required packages
         run: |
