--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -29,11 +29,7 @@ jobs:
       - name: Install required package
         run: |
           sudo apt-get install -y \
-            gstreamer1.0-tools \
-            gstreamer1.0-plugins-good \ 
-            gstreamer1.0-plugins-ugly \
-            libgstreamer1.0-dev \
-            libgstreamer-plugins-base1.0-dev
+            gstreamer1.0-tools
 
       - name: Set up Go
         uses: actions/setup-go@v4
