--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -29,7 +29,9 @@ jobs:
       - name: Install required package
         run: |
           sudo apt-get install -y \
-            gstreamer1.0-tools
+            gstreamer1.0-tools \
+            gstreamer1.0-plugins-good \
+            gstreamer1.0-plugins-ugly
 
       - name: Set up Go
         uses: actions/setup-go@v4
