--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -28,7 +28,7 @@ jobs:
           
       - name: Install required package
         run: |
-          sudo apt-get install -y \
+          sudo apt-get install -y -f \
             gstreamer1.0-tools \
             gstreamer1.0-plugins-good \
             gstreamer1.0-plugins-ugly \
