--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -32,7 +32,7 @@ jobs:
             gstreamer1.0-tools \
             gstreamer1.0-plugins-good \
             gstreamer1.0-plugins-ugly \
-            libgstreamer1.0-dev
+            libgstreamer1.0
 
       - name: Set up Go
         uses: actions/setup-go@v4
