--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -31,7 +31,8 @@ jobs:
             gstreamer1.0-tools \
             gstreamer1.0-plugins-good \
             gstreamer1.0-plugins-ugly \
-            libgstreamer1.0
+            libgstreamer-plugins-base1.0-dev
+
 
       - name: Set up Go
         uses: actions/setup-go@v4
