--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -31,7 +31,7 @@ jobs:
             gstreamer1.0-tools \
             gstreamer1.0-plugins-good \
             gstreamer1.0-plugins-ugly \
-            libgstreamer-plugins-base1.0-dev
+            gstreamer1.0-plugins-base
 
 
       - name: Set up Go
