--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install required packages
         run: |
-          sudo apt-get install -y make gcc pkg-config
+          sudo apt-get install -y make gcc pkg-config libunwind-dev
           
       - name: Install required package
         run: |
@@ -31,7 +31,8 @@ jobs:
             gstreamer1.0-tools \
             gstreamer1.0-plugins-good \
             gstreamer1.0-plugins-ugly \
-            gstreamer1.0-plugins-base
+            gstreamer1.0-plugins-base \
+            libgstreamer1.0-dev 
 
 
       - name: Set up Go
