--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -32,7 +32,8 @@ jobs:
             gstreamer1.0-plugins-good \
             gstreamer1.0-plugins-ugly \
             gstreamer1.0-plugins-base \
-            libgstreamer1.0-dev 
+            libgstreamer1.0-dev \
+            libgstreamer-plugins-base1.0-dev
 
 
       - name: Set up Go
