--- a/.github/workflows/terraform_code_quality.yaml
+++ b/.github/workflows/terraform_code_quality.yaml
@@ -1,19 +1,8 @@
 name: Terraform Code Qualtity
 
 on:
-  workflow_call:
-    inputs:
-      terraform_version:
-        required: true
-        type: string
-      tflint_version:
-        required: false
-        type: string
-        default: latest
-      tflint_config_path:
-        required: false
-        type: string
-        default: ".tflint.hcl"
+  pull_request:
+    types: [opened, reopened]
 
 permissions:
   contents: read            # git permissions to repo pull/push
@@ -25,17 +14,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: ${{ inputs.terraform_version }}
 
       - uses: terraform-linters/setup-tflint@v3
         name: Setup TFLint
         with:
-          tflint_version: ${{ inputs.tflint_version }}
+          tflint_version: latest
 
       - name: Check for Formatting Errors
         run: terraform fmt -check -recursive
@@ -43,4 +30,4 @@ jobs:
       - name: Check for Linting Errors
         run: |
           tflint --init
-          tflint -c ${{ inputs.tflint_config_path }} --recursive
+          tflint -c ".github/linters/.tflint.hcl" --recursive
