--- a/.github/workflows/pr_title_checker.yml
+++ b/.github/workflows/pr_title_checker.yml
@@ -25,8 +25,8 @@ jobs:
           # locally clones remote repo to runner
           git clone https://${{ secrets.PULL_FROM_OTHER_REPOSITORIES }}@github.com/roclub/workflow-templates.git source-repo
           cd source-repo
-          # Specify the files you want to pull
-          cp -u .github/configs/pr-title-checker-config.json ../
+          # Specify the files you want to pull and copy them to a file folder to maintain the original structure
+          cp -u .github/configs/pr-title-checker-config.json ../../.github/configs/
     
       - name: Check PR title
         uses: thehanimo/pr-title-checker@v1.4.1
