--- a/.github/workflows/projects_add_pr_to_projects.yaml
+++ b/.github/workflows/projects_add_pr_to_projects.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  add-to-project:
+  add_pr_to_project:
     runs-on: ubuntu-latest
     steps:
       - name: Add PR to project
