fix: GolangCI lint failing because timeout to short

--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -51,4 +51,4 @@ jobs:
         with:
           version: "v1.55.2"
           install-mode: "goinstall"
-          args: '--config=".github/linters/.golangci.yaml"'
+          args: '--config=".github/linters/.golangci.yaml" --timeout 60m'
