rename linters since name is deprecated

--- a/.github/linters/.golangci.yaml
+++ b/.github/linters/.golangci.yaml
@@ -88,10 +88,10 @@ linters:
     - goconst
     - gocritic
     - gocyclo
-    - goerr113
+    - err113
     - goheader
     - gofmt
-    - gomnd
+    - mnd
     - gomoddirectives
     - goprintffuncname
     - gosec
