--- a/.github/workflows/projects_add_pr_to_projects.yaml
+++ b/.github/workflows/projects_add_pr_to_projects.yaml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/add-to-project@v0.5.0
         with:
           project-url: 'https://github.com/orgs/roclub/projects/9'
-          github-token: ${{ secrets.PROJECTS_ADD_TO_PROJECT_PAT }}
+          github-token: ${{ github.TOKEN }}
