--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -24,16 +24,12 @@ jobs:
         with:
           fetch-depth: '1'
 
-      - name: Install required packages
+      - name: Setup and Install Required Packages
         run: |
+          # Add repository
           sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) main universe restricted multiverse"
-
-      - name: Install required packages
-        run: |
+          sudo apt-get update
           sudo apt-get install -y make gcc pkg-config libunwind-dev
-          
-      - name: Install required package
-        run: |
           sudo apt-get install -y -f \
             gstreamer1.0-tools \
             gstreamer1.0-plugins-good \
@@ -49,41 +45,8 @@ jobs:
           cache: false
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@c675eb70db3aa26b496bc4e64da320480338d41b # v3.0.0
         with:
           version: "v1.58.1"
           install-mode: "goinstall"
           args: '--config=".github/linters/.golangci.yaml" --timeout 60m'
-
-  govulncheck:
-    runs-on: ubuntu-latest
-    name: Run govulncheck
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
-        with:
-          fetch-depth: '1'
-
-      - name: Install required packages
-        run: |
-          sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) main universe restricted multiverse"
-
-      - name: Install required packages
-        run: |
-          sudo apt-get install -y make gcc pkg-config libunwind-dev
-          
-      - name: Install required package
-        run: |
-          sudo apt-get install -y -f \
-            gstreamer1.0-tools \
-            gstreamer1.0-plugins-good \
-            gstreamer1.0-plugins-ugly \
-            gstreamer1.0-plugins-base \
-            libgstreamer1.0-dev \
-            libgstreamer-plugins-base1.0-dev
-
-      - id: govulncheck
-        uses: golang/govulncheck-action@dd0578b371c987f96d1185abb54344b44352bd58 # v1.0.3
-        with:
-          go-version-input: ${{ env.GO_VERSION }}
-          go-package: ./...
