--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -1,8 +1,5 @@
 name: Golang Code Quality
 
-env:
-  GO_VERSION: '1.21.3'
-
 on:
   push:
     paths:
@@ -41,7 +38,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: '1.21.3'
           cache: false
 
       - name: golangci-lint
