chore: specified trigger types since not specifying does not include synchronize

--- a/.github/workflows/go_code_quality.yaml
+++ b/.github/workflows/go_code_quality.yaml
@@ -6,6 +6,10 @@ env:
 
 on:
   pull_request:
+    types:
+      - opened
+      - review_requested
+      - synchronize
     paths:
       - '**.go'
       - 'go.mod'
